Providing info about editing boundaries when determining caret bounds

This CL adds an EditingBoundaryCrossingRule argument to several
functions used to determine the local and absolute caret bounds.

These logic to determine the caret bounds also use the
ComputeInlineAdjustedPosition function to get an adjusted position,
based on the downstream and upstream equivalent positions. Currently,
we are always assuming kCanCrossEditingBoundary when calling to the
MostForwardCaretPosition and MostBackwardCaretPosition to get the
downstream and upstream positions respectively. This CL allows the
callers to decide a different editing boundaries restriction.

This CL should not cause any behavior change, since the new functions
to determine the downstream/upstream equivalent positions are ignoring
the editing boundaries rule, that's why I'm not adding any additional
tests for this change.

Bug: 688015

Change-Id: I1a73437cbf640fb0e0a75d29d367cb534e4de8f8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3259402
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Oriol Brufau <obrufau@igalia.com>
Cr-Commit-Position: refs/heads/main@{#938733}