third_party/blink/renderer/core/editing/inline_box_position.h
@@ -31,6 +31,7 @@
 #define THIRD_PARTY_BLINK_RENDERER_CORE_EDITING_INLINE_BOX_POSITION_H_
 
 #include "third_party/blink/renderer/core/core_export.h"
+#include "third_party/blink/renderer/core/editing/editing_boundary.h"
 #include "third_party/blink/renderer/core/editing/forward.h"
 #include "third_party/blink/renderer/platform/wtf/allocator/allocator.h"
 
@@ -69,9 +70,12 @@ ComputeInlineBoxPosition(const PositionWithAffinity&);
 CORE_EXPORT InlineBoxPosition
 ComputeInlineBoxPosition(const PositionInFlatTreeWithAffinity&);
 
-PositionWithAffinity ComputeInlineAdjustedPosition(const PositionWithAffinity&);
+PositionWithAffinity ComputeInlineAdjustedPosition(
+    const PositionWithAffinity&,
+    EditingBoundaryCrossingRule = kCanCrossEditingBoundary);
 PositionInFlatTreeWithAffinity ComputeInlineAdjustedPosition(
-    const PositionInFlatTreeWithAffinity&);
+    const PositionInFlatTreeWithAffinity&,
+    EditingBoundaryCrossingRule = kCanCrossEditingBoundary);
 
 InlineBoxPosition ComputeInlineBoxPositionForInlineAdjustedPosition(
     const PositionWithAffinity&);
