third_party/blink/renderer/core/editing/local_caret_rect.h
@@ -6,6 +6,7 @@
 #define THIRD_PARTY_BLINK_RENDERER_CORE_EDITING_LOCAL_CARET_RECT_H_
 
 #include "third_party/blink/renderer/core/core_export.h"
+#include "third_party/blink/renderer/core/editing/editing_boundary.h"
 #include "third_party/blink/renderer/core/editing/forward.h"
 #include "third_party/blink/renderer/core/layout/geometry/physical_rect.h"
 
@@ -38,18 +39,22 @@ struct LocalCaretRect {
 // TODO(xiaochengh): Get rid of the default parameter.
 CORE_EXPORT LocalCaretRect LocalCaretRectOfPosition(
     const PositionWithAffinity&,
-    LayoutUnit* /* extra_width_to_end_of_line */ = nullptr);
-CORE_EXPORT LocalCaretRect
-LocalCaretRectOfPosition(const PositionInFlatTreeWithAffinity&);
+    LayoutUnit* /* extra_width_to_end_of_line */ = nullptr,
+    EditingBoundaryCrossingRule = kCanCrossEditingBoundary);
+CORE_EXPORT LocalCaretRect LocalCaretRectOfPosition(
+    const PositionInFlatTreeWithAffinity&,
+    EditingBoundaryCrossingRule = kCanCrossEditingBoundary);
 
 LocalCaretRect LocalSelectionRectOfPosition(const PositionWithAffinity&);
 
 // Bounds of (possibly transformed) caret in absolute coords
-CORE_EXPORT IntRect
-AbsoluteCaretBoundsOf(const PositionWithAffinity&,
-                      LayoutUnit* extra_width_to_end_of_line = nullptr);
-CORE_EXPORT IntRect
-AbsoluteCaretBoundsOf(const PositionInFlatTreeWithAffinity&);
+CORE_EXPORT IntRect AbsoluteCaretBoundsOf(
+    const PositionWithAffinity&,
+    LayoutUnit* extra_width_to_end_of_line = nullptr,
+    EditingBoundaryCrossingRule rule = kCanCrossEditingBoundary);
+CORE_EXPORT IntRect AbsoluteCaretBoundsOf(
+    const PositionInFlatTreeWithAffinity&,
+    EditingBoundaryCrossingRule rule = kCanCrossEditingBoundary);
 
 CORE_EXPORT IntRect AbsoluteSelectionBoundsOf(const VisiblePosition&);
 CORE_EXPORT IntRect AbsoluteSelectionBoundsOf(const VisiblePositionInFlatTree&);
